# AttackGen

./: .env.example  .gitmodules  AUDIT_PIPELINE_DOCUMENTATION.md  README.md  auditsExtract.md  comprehensive_setup_test.py  main.py  next-env.d.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/health/: route.ts
app/api/tasks/: route.ts
app/components/: StatusPill.tsx
app/lib/: modules.ts
docs/: ARCHITECTURE.md
public/.well-known/: farcaster.json
scripts/: extract.py  process_audit_pipeline.py  quick_start.py  runFoundryTests.ts
server/: chunkIndex.py  create_audit_embeddings.py  embedCreate.py  loadEmbeddings.py  localAttack.py  main.py
src/: LoginPage.tsx
src/attackgen.egg-info/: PKG-INFO  SOURCES.txt
